--- a/app_server/views/home.jade
+++ b/app_server/views/home.jade
@@ -1,6 +1,12 @@
 extends layout
 
 block content
-  .jumbotron.text-center
-    h1 Welcome to Our Restaurant
-    p Experience the finest dining in town!
+  .hero-section
+    .hero-text
+      h1 Only tasty wonders delicious food.
+      p Enjoy pleasant time with your loved ones in beautiful scenic surroundings with delicious food.
+      .hero-btns
+        a.btn.btn-primary(href='#') Book A Table
+        a.btn.btn-secondary(href='#') Order Online
+    .hero-image
+      img(src='path-to-your-image.jpg', alt='Delicious Food')
