--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -1,42 +1,44 @@
-/* menu.css */
-
-body {
-  font-family: "Georgia", serif;
+.menu-container body {
+  font-family: "Lato", san-serif;
   background-color: #fff;
+  font-body-style: normal;
+  font-body-weight: 400;
+  font-heading-scale: 1.5;
   margin: 0;
   padding: 0;
 }
 
-.header {
+.menu-container .header {
   background-color: #ffc107;
   color: #343a40;
   padding: 20px;
   text-align: center;
+  font-size: "Tangerine", cursive;
 }
 
-.container {
+.menu-container .container {
   padding: 30px;
 }
 
-h1 {
+.menu-container h1 {
   font-size: 2.5em;
   text-align: center;
   color: #343a40;
   margin-bottom: 30px;
 }
 
-.menu-item {
+.menu-container .menu-item {
   border-bottom: 1px solid #e9ecef;
   padding: 15px 0;
 }
 
-.menu-item h2 {
+.menu-container .menu-item h2 {
   color: #343a40;
   font-size: 1.8em;
   margin: 0;
 }
 
-.menu-item p {
+.menu-container .menu-item p {
   color: #6c757d;
   font-size: 1.2em;
   margin: 5px 0 0 0;
