--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -4,29 +4,34 @@ html
     title Restaurant Website
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/home.css')
+    link(rel='stylesheet', href='/stylesheets/menu.css')
+    link(rel='stylesheet', href='/stylesheets/blog.css')
+    link(rel='stylesheet', href='/stylesheets/about.css')
+    link(rel='stylesheet', href='/stylesheets/contact.css')
     link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css')
+
   body
-    header
-      nav.navbar.navbar-expand-lg.navbar-light.bg-light
-        a.navbar-brand(href='#') RESTRO
-        button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
-          span.navbar-toggler-icon
-        .collapse.navbar-collapse#navbarNav
-          ul.navbar-nav.ml-auto
-            li.nav-item
-              a.nav-link(href='/') Home
-            li.nav-item
-              a.nav-link(href='/Menu') Menu
-            li.nav-item
-            li.nav-item
-              a.nav-link(href='/blog') Blog
-            li.nav-item
-              a.nav-link(href='/about') about
-            li.nav-item
-              a.nav-link(href='/contact') Contact
-            li.nav-item
-              button.btn.btn-warning Log In
+    if page === 'home'
+      header
+        nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
+          a.navbar-brand(href='/') RESTRO
+          button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
+            span.navbar-toggler-icon
+          .collapse.navbar-collapse#navbarNav
+            ul.navbar-nav.ml-auto
+              li.nav-item
+                a.nav-link(href='/') Home
+              li.nav-item
+                a.nav-link(href='menu#') Menu
+              li.nav-item
+                a.nav-link(href='blog#') Blog
+              li.nav-item
+                a.nav-link(href='about#') About
+              li.nav-item
+                a.nav-link(href='contact#') Contact
+              li.nav-item
+                button.btn.btn-warning(type='button') Log In
 
     block content
 
