--- a/app_server/views/home.jade
+++ b/app_server/views/home.jade
@@ -6,7 +6,10 @@ block content
       h1 Only tasty wonders delicious food.
       p Enjoy pleasant time with your loved ones in beautiful scenic surroundings with delicious food.
       .hero-btns
-        a.btn.btn-primary(href='#') Book A Table
+        a.btn.book-btn(href='#') Book a Table
         a.btn.btn-secondary(href='#') Order Online
-    .hero-image
-      img(src='path-to-your-image.jpg', alt='Delicious Food')
+    .hero-images
+      .home-right
+        img.food-img.food-1(src='/Users/anand/Documents/t_project/teamproject/public/images/grill.jpg', alt='Grilled Meat', loading='lazy')
+        img.food-img.food-2(src='/Users/anand/Documents/t_project/teamproject/public/images/salmon.jpg', alt='Plated Dish', loading='lazy')
+        img.food-img.food-3(src='/Users/anand/Documents/t_project/teamproject/public/images/grill.jpg', alt='Salmon Dish', loading='lazy')
