--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -14,7 +14,7 @@ html
   body
     if page === 'home'
       header
-        nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
+        nav.navbar.navbar-expand-lg.navbar-dark
           a.navbar-brand(href='/') RESTRO
           button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
             span.navbar-toggler-icon
@@ -23,15 +23,15 @@ html
               li.nav-item
                 a.nav-link(href='/') Home
               li.nav-item
-                a.nav-link(href='menu#') Menu
+                a.nav-link(href='/menu') Menu
               li.nav-item
-                a.nav-link(href='blog#') Blog
+                a.nav-link(href='/blog') Blog
               li.nav-item
-                a.nav-link(href='about#') About
+                a.nav-link(href='/about') About
               li.nav-item
-                a.nav-link(href='contact#') Contact
+                a.nav-link(href='/contact') Contact
               li.nav-item
-                button.btn.btn-warning(type='button') Log In
+                button.btn.btn-warning(type='button') Signup
 
     block content
 
