--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -10,7 +10,6 @@ html
     link(rel='stylesheet', href='/stylesheets/about.css')
     link(rel='stylesheet', href='/stylesheets/contact.css')
     link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css')
-
   body
     if page === 'home'
       header
@@ -38,3 +37,4 @@ html
     script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js')
     script(src='https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.11/dist/umd/popper.min.js')
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js')
+    - var page = typeof page !== 'undefined' ? page : 'default';
