--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -1,13 +1,14 @@
 .blog-container {
-  font-family: "Lucida Sans", sans-serif;
-  background-color: #f8f9fa;
+  font-family: Arial, sans-serif;
+  background-color: #0d0d0d;
   padding: 60px 20px;
+  color: #e0e0e0;
   margin: 0;
 }
 
 .blog-header h1 {
   font-size: 3em;
-  color: #343a40;
+  color: #00bfa5;
   text-align: center;
   margin-bottom: 10px;
   animation: fadeInDown 1s ease-in-out;
@@ -15,7 +16,7 @@
 
 .blog-header p {
   font-size: 1.3em;
-  color: #6c757d;
+  color: #b3b3b3;
   text-align: center;
   margin-bottom: 30px;
   animation: fadeInDown 1s ease-in-out 0.3s;
@@ -29,9 +30,9 @@
 }
 
 .blog-post {
-  background-color: #fff;
+  background-color: #1a1a1a;
   border-radius: 10px;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
   overflow: hidden;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   width: calc(50% - 20px);
@@ -42,7 +43,7 @@
 
 .blog-post:hover {
   transform: translateY(-10px);
-  box-shadow: 0 6px 30px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 6px 30px rgba(0, 0, 0, 0.5);
 }
 
 .blog-image img {
@@ -63,65 +64,70 @@
 
 .blog-content h2 {
   font-size: 1.8em;
-  color: #007bff;
+  color: #00bfa5;
   margin-bottom: 10px;
   animation: fadeInUp 1s ease-in-out;
 }
 
 .blog-content p {
   font-size: 1.1em;
-  color: #6c757d;
+  color: #b3b3b3;
   line-height: 1.6;
   margin-bottom: 15px;
   animation: fadeInUp 1s ease-in-out 0.2s;
 }
-
 .blog-content a.btn {
-  background-color: #007bff;
-  color: #fff;
+  background-color: #399a8d;
+  color: #e0e0e0;
   padding: 10px 20px;
-  text-decoration: none;
+  /* text-decoration: none; */
   border-radius: 5px;
-  transition: background-color 0.3s ease;
+  transition: 0.3s ease;
   animation: fadeInUp 1s ease-in-out 0.4s;
+  outline: none; /* Remove default outline */
 }
 
 .blog-content a.btn:hover {
-  color: blue;
-  background-color: #fff;
-  border: 1px solid blue;
+  color: #00bfa5;
+  background-color: #333333;
+  border: 1px solid #399a8d;
   text-decoration: none;
-}
-
-/* Load More Button */
-.load-more-container {
-  text-align: center;
-  margin-top: 30px;
+  outline: none; /* Ensure no outline on hover */
 }
 
 button.btn-load-more {
   width: 200px;
-  color: #fff;
+  color: #e0e0e0;
   display: block;
   text-align: center;
   margin: 20px auto;
   padding: 10px;
   border-radius: 10px;
   border: 1px solid transparent;
-  background-color: blue;
+  background-color: #399a8d;
   transition: 0.3s;
+  outline: none;
 }
 
 button.btn-load-more:hover {
-  /* background-color: #0056b3; */
-  color: blue;
-  background-color: #fff;
-  border: 1px solid blue;
+  color: #31fee2;
+  background-color: #333333;
+  border: 1px solid #399a8d;
   text-decoration: none;
+  outline: none;
 }
-/* load more no content found need to write js */
+
+button.btn-load-more:active {
+  transform: translateY(2px);
+}
+button.btn-load-more:focus,
+.blog-content a.btn:focus {
+  outline: none;
+}
+
+/* No More Content */
 .noContent {
-  color: #000 !important;
+  color: #e0e0e0 !important;
   background-color: transparent !important;
   pointer-events: none;
 }
@@ -136,10 +142,11 @@ button.btn-load-more:hover {
 .load-more-container.noContent::before {
   content: "No more content";
   font-size: 1.2em;
-  color: #6c757d;
+  color: #b3b3b3;
   animation: fadeInUp 1s ease-in-out;
 }
 
+/* Animations */
 @keyframes fadeInDown {
   from {
     opacity: 0;
