--- a/public/stylesheets/contact.css
+++ b/public/stylesheets/contact.css
@@ -47,7 +47,7 @@ button {
   padding: 10px;
   font-size: 1.2em;
   color: #fff;
-  /* background-color: #007bff; */
+  background-color: #007bff;
   border: none;
   border-radius: 5px;
   margin-top: 20px;
