--- a/app_server/views/blog.jade
+++ b/app_server/views/blog.jade
@@ -9,7 +9,7 @@ block content
     .blog-posts
       .blog-post
         .blog-image
-          img(src='path-to-your-image-1.jpg', alt='Culinary Trends')
+          img(src='/images/blog1.jpg', alt='Culinary Trends')
         .blog-content
           h2 Latest Culinary Trends
           p Stay updated with the latest trends in the culinary world. From innovative recipes to food industry news, we've got you covered.
@@ -17,7 +17,7 @@ block content
 
       .blog-post
         .blog-image
-          img(src='path-to-your-image-2.jpg', alt='Chef Special Recipes')
+          img(src='/images/blog2.jpg', alt='Chef Special Recipes')
         .blog-content
           h2 Chef's Special Recipes
           p Discover exclusive recipes shared by our head chef. Impress your friends and family with these gourmet dishes!
@@ -25,7 +25,7 @@ block content
 
       .blog-post
         .blog-image
-          img(src='path-to-your-image-3.jpg', alt='Events and Promotions')
+          img(src='/images/blog3.jpg', alt='Events and Promotions')
         .blog-content
           h2 Events and Promotions
           p Don't miss out on our upcoming events and promotions. Join us for special dinners, cooking classes, and more.
