--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -4,19 +4,26 @@ html
     title Restaurant Website
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
+    
+    // CSS Stylesheets
     link(rel='stylesheet', href='/stylesheets/home.css')
-    link(rel='stylesheet', href='/stylesheets/menu.css')
     link(rel='stylesheet', href='/stylesheets/blog.css')
     link(rel='stylesheet', href='/stylesheets/about.css')
     link(rel='stylesheet', href='/stylesheets/contact.css')
+    //- linl(rel='stylesheet', href='/stylesheets/signin.css')
     link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css')
+
   body
-    if page === 'home'
+    if page == 'home'
       header
         nav.navbar.navbar-expand-lg.navbar-dark
           a.navbar-brand(href='/') RESTRO
+          
+          // Toggler button for small screens
           button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
             span.navbar-toggler-icon
+            
+          // Navigation links
           .collapse.navbar-collapse#navbarNav
             ul.navbar-nav.ml-auto
               li.nav-item
@@ -30,10 +37,12 @@ html
               li.nav-item
                 a.nav-link(href='/contact') Contact
               li.nav-item
-                button.btn.btn-warning(type='button') Signup
+                a.nav-link(href='/signin') Sign In
+                
 
     block content
 
+    // JavaScript includes
     script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js')
     script(src='https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.11/dist/umd/popper.min.js')
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js')
