--- a/app_server/views/contact.jade
+++ b/app_server/views/contact.jade
@@ -1,8 +1,18 @@
-extends layout
 
+link(rel="stylesheet", href="/stylesheets/contact.css")
 block content
-  .container
-    h2 Contact Us
-    p Address: 123 Food Street
-    p Phone: (555) 12345954
-    p Email: ar@restaurant.com
+  .contact-container
+    .contact-header
+      h2 Contact Us
+      p Feel free to reach out to us anytime!
+    
+    .contact-info
+      .info-item
+        h3 Address
+        p 123 Food Street, Gourmet City
+      .info-item
+        h3 Phone
+        p (555) 123-45954
+      .info-item
+        h3 Email
+        p ar@restaurant.com
