--- a/app_server/views/signin.jade
+++ b/app_server/views/signin.jade
@@ -1,20 +1,19 @@
-title Sign In
-link(rel='stylesheet', href='/stylesheets/signup.css')
-link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css')
+link(rel="stylesheet", href="/stylesheets/signin.css")
 
-body
-  .container
-    .row.justify-content-center
-      .col-md-6
-        h2.text-center Sign In
-        form(action='/signin', method='POST')
+block content
+  .container-signin
+    .card
+      .card-header Sign In
+      .card-body
+        h2.welcome-message Welcome Back!
+        p.welcome-subtext We missed you! Please sign in to continue.
+        form(action="/signin", method="POST")
           .form-group
-            label(for='email') Email
-            input#email.form-control(type='email', placeholder='Enter email', required)
+            label(for="email") Email
+            input.form-control(type="email", name="email", placeholder="Your Email", required)
           .form-group
-            label(for='password') Password
-            input#password.form-control(type='password', placeholder='Enter password', required)
-          button.btn.btn-primary.btn-block(type='submit') Sign In
-        p.text-center
-          | Don't have an account?
-          a(href='/signup') Create an account
+            label(for="password") Password
+            input.form-control(type="password", name="password", placeholder="Password", required)
+          button.btn.btn-primary(type="submit") Sign In
+        p Don't have an account? 
+          a(href="/signup") Create an Account
