--- a/app_server/views/signup.jade
+++ b/app_server/views/signup.jade
@@ -1,21 +1,24 @@
-extends layout
-
+link(rel="stylesheet", href="/stylesheets/signup.css")
 block content
-  .container
-    .row.justify-content-center
-      .col-md-6
-        .card.mt-5
-          .card-header.text-center
-            h3 Create Account
-          .card-body
-            form(method='POST', action='/signup-submit')
-              .form-group
-                label(for='username') username
-                input#name.form-control(type='text', name='name', placeholder='Enter your name', required)
-              .form-group
-                label(for='email') Email address
-                input#email.form-control(type='email', name='email', placeholder='Enter email', required)
-              .form-group
-                label(for='password') Password
-                input#password.form-control(type='password', name='password', placeholder='Password', required)
-              button.btn.btn-primary.btn-block(type='submit') Create Account
+  .signup-page
+    .container
+      .form-box
+        h2 Sign Up
+
+        form(action="/signup", method="POST")
+          .form-group
+            label(for="username") Full Name
+            input.form-control(type="text", name="name", placeholder="Your Full Name", required)
+
+          .form-group
+            label(for="email") Email
+            input.form-control(type="email", name="email", placeholder="Your Email", required)
+
+          .form-group
+            label(for="password") Password
+            input.form-control(type="password", name="password", placeholder="Password", required)
+
+          button.btn(type="submit") Create Account
+
+        p.text-center Already have an account? 
+          a(href="/signin") Sign In
