--- a/public/stylesheets/book-table.css
+++ b/public/stylesheets/book-table.css
@@ -50,7 +50,7 @@ input[type="number"]:focus {
 button[type="submit"] {
   width: 100%;
   padding: 12px;
-  background-color: #ff8c00; /* Orange color for the button */
+  background-color: #ff8c00; 
   border: none;
   border-radius: 5px;
   color: white;
@@ -60,7 +60,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-  background-color: #e67e00; /* Darker orange on hover */
+  background-color: #e67e00; 
 }
 
 /* Form styling on smaller screens */
