--- a/app_server/views/booking-confirmation.jade
+++ b/app_server/views/booking-confirmation.jade
@@ -1,3 +1,4 @@
+link(rel="stylesheet", href="/stylesheets/booking-confirmation.css")
 block content
   h1 Booking Confirmed
   p Thank you, #{bookingDetails.name}. Your table has been booked!
