--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -8,7 +8,7 @@
 
 .blog-header h1 {
   font-size: 3em;
-  color: #00bfa5;
+  color: #ff6347;
   text-align: center;
   margin-bottom: 10px;
   animation: fadeInDown 1s ease-in-out;
@@ -77,10 +77,10 @@
   animation: fadeInUp 1s ease-in-out 0.2s;
 }
 .blog-content a.btn {
-  background-color: #399a8d;
+  background-color: #ff6347;
   color: #e0e0e0;
   padding: 10px 20px;
-  /* text-decoration: none; */
+  text-decoration: none;
   border-radius: 5px;
   transition: 0.3s ease;
   animation: fadeInUp 1s ease-in-out 0.4s;
@@ -104,7 +104,7 @@ button.btn-load-more {
   padding: 10px;
   border-radius: 10px;
   border: 1px solid transparent;
-  background-color: #399a8d;
+  background-color: #ff6347;
   transition: 0.3s;
   outline: none;
 }
