--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -15,7 +15,7 @@ body {
 /* Header Styles */
 .menu-page header {
   background-color: #333;
-  color: #ef6b06;
+  color: #ff6347;
   text-align: center;
   padding: 40px 0;
   position: relative;
