--- a/app_server/views/about.jade
+++ b/app_server/views/about.jade
@@ -1,5 +1,5 @@
-//- extends layout
-link(rel="stylesheet", href="/stylesheets/about.css")
+extends layout
+//link(rel="stylesheet", href="/stylesheets/about.css")//
 block content
   .about-container
     .about-hero-section
