--- a/app_server/views/contact.jade
+++ b/app_server/views/contact.jade
@@ -1,5 +1,5 @@
-
-link(rel="stylesheet", href="/stylesheets/contact.css")
+extends layout
+//link(rel="stylesheet", href="/stylesheets/contact.css")
 block content
   .contact-container
     .contact-header
