--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -6,6 +6,8 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1')
     
     // CSS Stylesheets
+    link(rel="stylesheet", href="/stylesheets/about.css")
+    link(rel="stylesheet", href="/stylesheets/contact.css")
     link(rel='stylesheet', href='/stylesheets/home.css')
     link(rel='stylesheet', href='/stylesheets/blog.css')
     link(rel="stylesheet", href="/stylesheets/menu.css")
@@ -15,7 +17,7 @@ html
 
 
   body
-    if page == 'home'
+    
       header
         nav.navbar.navbar-expand-lg.navbar-dark
           a.navbar-brand(href='/') Restro
@@ -45,7 +47,7 @@ html
                 a.nav-link(href='/cart')
                   i.fa.fa-shopping-cart
                   // Dynamic item count
-                  span#cart-count.badge.badge-warning 5
+                  span#cart-count.badge.badge-warning 1
 
     block content
 
